--- a/Services/Catalog/Catalog.Infrastructure/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/Services/Catalog/Catalog.Infrastructure/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-preview.1.24080.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Catalog.Application\Catalog.Application\Catalog.Application.csproj" />
     <ProjectReference Include="..\..\Catalog.Core\Catalog.Core\Catalog.Core.csproj" />
   </ItemGroup>
