--- a/Services/Basket/Basket.Application/Basket.Application.csproj
+++ b/Services/Basket/Basket.Application/Basket.Application.csproj
@@ -14,10 +14,14 @@
     <Folder Include="GrpcService\" />
   </ItemGroup>
 
-   <ItemGroup>
-	<PackageReference Include="AutoMapper" Version="12.0.1" />
-	<PackageReference Include="Grpc.AspNetCore" Version="2.51.0" />
-	<PackageReference Include="MediatR" Version="11.1.0" />
-   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.Redis" Version="6.0.4" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />		
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+	</ItemGroup>
 
 </Project>
