--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,7 +7,13 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo_data:/data/db   
+      - mongo_data:/data/db 
+      
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379" 
   
         
   catalog.api:
@@ -23,4 +29,13 @@ services:
       - catalogdb
     ports:
       - "9000:8080" 
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development#     
+    depends_on:
+      - basketdb     
+    ports:
+      - "9001:8080"
  
