--- a/Services/Discount/Discount.Infrastructure/Discount.Infrastructure.csproj
+++ b/Services/Discount/Discount.Infrastructure/Discount.Infrastructure.csproj
@@ -10,7 +10,9 @@
     <ProjectReference Include="..\Discount.Application\Discount.Application.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.123" />	   
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />	   
 	<PackageReference Include="Npgsql" Version="6.0.8" />
 	<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-preview.1.24080.9" />
    </ItemGroup>
