--- a/Services/Discount/Discount.Application/Discount.Application.csproj
+++ b/Services/Discount/Discount.Application/Discount.Application.csproj
@@ -10,4 +10,18 @@
     <ProjectReference Include="..\Discount.Core\Discount.Core.csproj" />
   </ItemGroup>
 
+   <ItemGroup>
+	<PackageReference Include="AutoMapper" Version="12.0.1" />
+	<PackageReference Include="Grpc.AspNetCore" Version="2.51.0" />
+	<PackageReference Include="MediatR" Version="11.1.0" />
+   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Mapper\" />
+    <Folder Include="Queries\" />
+    <Folder Include="Protos\" />
+  </ItemGroup>
+
 </Project>
