--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -67,6 +67,8 @@ services:
     container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings__ConnectionString=basketdb:6379"
+      - "GrpcSettings__DiscountUrl=http://discount.api"
     depends_on:
       - basketdb     
     ports:
