--- a/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\Infrastructure\Common.Logging\Common.Logging.csproj" />
+		<ProjectReference Include="..\..\..\Infrastructure\EventBus.Messages\EventBus.Messages.csproj" />
+		<ProjectReference Include="..\Ordering.Core\Ordering.Core.csproj" />
+	</ItemGroup>
+
 </Project>
