--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
   
   portainer:
     image: portainer/portainer-ce
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
   
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
