--- a/Services/Ordering/Ordering.API/Ordering.API.csproj
+++ b/Services/Ordering/Ordering.API/Ordering.API.csproj
@@ -13,6 +13,7 @@
 	<ItemGroup>		
 		<ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
 		<ProjectReference Include="..\Ordering.Infrastructure\Ordering.Infrastructure.csproj" />
+		<ProjectReference Include="..\..\..\Infrastructure\EventBus.Messages\EventBus.Messages.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
