--- a/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -6,7 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-	<ItemGroup>		
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\Infrastructure\EventBus.Messages\EventBus.Messages.csproj" />
 		<ProjectReference Include="..\Ordering.Core\Ordering.Core.csproj" />
 	</ItemGroup>
 	
