--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -113,4 +113,17 @@ services:
       - rabbitmq 
     ports:
       - "9003:80"
+
+  ocelotapigw:
+    container_name: ocelotapigw
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development      
+    depends_on:
+#      - identityserver
+      - catalog.api
+      - basket.api
+      - discount.api
+      - ordering.api
+    ports:
+      - "9010:80" 
  
