--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -113,13 +113,20 @@ services:
       - rabbitmq 
     ports:
       - "9003:80"
+  identityserver:
+    container_name: identityserver
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://*:9011      
+    ports:
+      - "9011:9011"
 
   ocelotapigw:
     container_name: ocelotapigw
     environment:
       - ASPNETCORE_ENVIRONMENT=Development      
     depends_on:
-#      - identityserver
+      - identityserver
       - catalog.api
       - basket.api
       - discount.api
