--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,12 @@ services:
     build:
       context: .
       dockerfile: ApiGateways/Ocelot.ApiGateway/Dockerfile
+
+  identityserver:
+    image: ${DOCKER_REGISTRY-}identityserver
+    build:
+     context: .
+     dockerfile: Infrastructure/EShopping.Identity/Dockerfile
       
 volumes:
   mongo_data:
