--- a/ApiGateways/nginx/nginx.local.conf
+++ b/ApiGateways/nginx/nginx.local.conf
@@ -12,7 +12,7 @@ http {
     }  
   
     server {        
-        listen 443 ssl;   
+        listen 44344 ssl;   
         ssl_certificate /etc/ssl/certs/id-local.eshopping.com.crt;
         ssl_certificate_key /etc/ssl/private/id-local.eshopping.com.key;
        
@@ -33,6 +33,40 @@ http {
             proxy_buffer_size           128k;
             proxy_buffers               4 256k;
             proxy_busy_buffers_size     256k;
-        }   
+        }  
+         location /catalog/ {
+            proxy_pass         http://catalog/;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host:44344;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Host $server_name:44344;
+            proxy_buffer_size           128k;
+            proxy_buffers               4 256k;
+            proxy_busy_buffers_size     256k;
+            
+        }
+                      
+        location /basket/ {
+            proxy_pass         http://basket/;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host:44344;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Host $server_name:44344;
+            proxy_buffer_size           128k;
+            proxy_buffers               4 256k;
+            proxy_busy_buffers_size     256k;
+        }
     }   
 }
