Logging Messages from Application

--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -10,7 +10,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "GetAllProductsHandler": "Debug",
+      "Catalog.Application.Handlers": "Debug",
+      "Catalog": "Debug"
     }
   },
   "AllowedHosts": "*"
